Fix style in home and detail page, create page 404

--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,3 +1,4 @@
-<h1><%= message %></h1>
-<h2><%= error.status %></h2>
-<pre><%= error.stack %></pre>
+<div class="error-404-div">
+    <h1 class="error-404-text">404</h1>
+    <h4 class="error-back-home">Back to <a href="/" class="text-primary">home</a></h4>
+</div>
