--- a/resources/assets/css/overright.css
+++ b/resources/assets/css/overright.css
@@ -216,3 +216,33 @@
     width: 50px;
     height: 50px;
 }
+
+.error-404-text {
+    text-align: center;
+    font-size: 12em;
+    font-family: cursive;
+}
+
+.error-back-home {
+    text-align: center;
+}
+
+.error-404-div {
+    margin: 50px;
+}
+
+.padding5 {
+    padding: 5px;
+}
+
+.padding40 {
+    padding: 40px;
+}
+
+.m-bottom50 {
+    margin-bottom: 50px;
+}
+
+.m-bottom15 {
+    margin-bottom: 15px;
+}
