--- a/resources/assets/css/style.css
+++ b/resources/assets/css/style.css
@@ -145,6 +145,7 @@ input:-webkit-autofill:focus {
 
 .btn-category {
     text-align: left;
+    height: 50px;
 }
 
 .list-category {
@@ -152,7 +153,7 @@ input:-webkit-autofill:focus {
 }
 
 .img-profile {
-    width: 250px;
+    width: 200px;
     margin-bottom: 20px;
 }
 
