--- a/views/books/detail.ejs
+++ b/views/books/detail.ejs
@@ -110,7 +110,7 @@
                             <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-9">
                                 <div class="event-item wow fadeInRight">
                                     <h4 class="show tip-left"><%= review.created_at %></h4>
-                                    <div class="well">
+                                    <div class="well padding5">
                                         <div class="media">
                                             <div class="media-left">
                                                 <% if (review.user.avatar !== null) { %>
@@ -124,20 +124,19 @@
                                                 <% } %>
                                             </div>
                                             <div class="media-body">
-                                                <div class="space-10"></div>
-                                                <a href="/users/<%= review.user.id %>"><h4 class="media-heading"><%= review.user.name %></h4></a>
-                                                <div class="space-10"></div>
-                                                <ul class="list-inline list-unstyled rating-star">
-                                                <% for (var i=0; i<review.star; i++) { %>
-                                                    <li class="active"><i class="icofont icofont-star"></i></li>
-                                                <% } %>
-                                                </ul>
+                                                <a href="/users/<%= review.user.id %>">
+                                                    <h4 class="media-heading list-inline list-unstyled rating-star">
+                                                        <%= review.user.name %>
+                                                        <% for (var i=0; i<review.star; i++) { %>
+                                                        <li class="active"><i class="icofont icofont-star"></i></li>
+                                                        <% } %>
+                                                    </h4>
+                                                </a>
                                                 <p><%= review.content %></p>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="space-20"></div>
                             </div>
                             <% }) %>
                             <% } %>
@@ -165,7 +164,6 @@
                                         <% } %>
                                     </div>
                                 </div>
-                                <div class="space-20"></div>
                                 <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-9">
                                     <% if (data.item.current_user_review !== null) { %>
                                         <button type="submit" class="btn btn-primary hover-btn-default"> Edit review <i class="fa fa-long-arrow-right"></i></button>
@@ -236,7 +234,6 @@
                                         </div>
                                     </div>
                                 </div>
-                                <div class="space-20"></div>
                             </div>
                             <% }) %>
                             <% } %>
