--- a/views/books/detail.ejs
+++ b/views/books/detail.ejs
@@ -74,7 +74,7 @@
                                         <h5> By Framgia </h5>
                                     </div>
                                     <% } %>
-                                </div>%>
+                                </div>
                             </div>
                         </div>
                         <div class="space-30"></div>
